--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
     git:
       url: https://github.com/dispersik/jitsi_meet_fork
       ref: master
+  telephony: ^0.2.0
   # speech_recognition: ^0.3.0+1
 
 dev_dependencies:
