--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
       url: https://github.com/dispersik/jitsi_meet_fork
       ref: master
   telephony: ^0.2.0
+  call_log: ^4.0.0
+  workmanager: ^0.5.0
+  flutter_initicon: ^2.0.0
   # speech_recognition: ^0.3.0+1
 
 dev_dependencies:
