--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   call_log: ^4.0.0
   workmanager: ^0.5.0
   flutter_initicon: ^2.0.0
+  url_launcher: ^6.1.5
   # speech_recognition: ^0.3.0+1
 
 dev_dependencies:
