--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   workmanager: ^0.5.0
   flutter_initicon: ^2.0.0
   url_launcher: ^6.1.5
+  jitsi_meet_wrapper: ^0.0.5
   # speech_recognition: ^0.3.0+1
 
 dev_dependencies:
