--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_initicon: ^2.0.0
   url_launcher: ^6.1.5
   jitsi_meet_wrapper: ^0.0.5
+  webview_flutter: ^3.0.4
   # speech_recognition: ^0.3.0+1
 
 dev_dependencies:
